Bug 691763 - Missing objects with transparency
Summary: Missing objects with transparency
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-10 19:05 UTC by Chris Liddell (chrisl)
Modified: 2011-07-19 20:17 UTC (History)
2 users (show)

See Also:
Customer:
Word Size: ---


Attachments
cut down example (373.41 KB, application/download)
2010-11-11 15:34 UTC, Chris Liddell (chrisl)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Liddell (chrisl) 2010-11-10 19:05:07 UTC
The file stars.pdf from:
http://bugs.ghostscript.com/show_bug.cgi?id=691755

When rendered with GS shows only one image of a star at the top of the page, where it should contain 6 spaced across the page.

A simple:
./gs -sDEVICE=pnmraw -o output/stuff%03d.pnm -r150 -dBATCH -dNOPAUSE stars.pdf

shows the problem.


By disabling transparency all the stars get drawn, but obviously without the "effects".
Comment 1 Chris Liddell (chrisl) 2010-11-11 15:34:44 UTC
Created attachment 6892 [details]
cut down example

These files are not easy to cut down, due to their (really bad!!) construction. Since I was half way there, I cut it down to just one case of the missing star problem.

It just might same someone time.
Comment 2 Michael Vrhel 2010-11-11 17:04:22 UTC
Thanks Chris for doing that.
Comment 3 Michael Vrhel 2010-11-19 21:46:28 UTC
OK. This file is insane.  Likely a pattern with transparency issue.  Now getting back to work on my fix so that large patterns can be handled as clists.
Comment 4 Michael Vrhel 2010-11-20 00:39:16 UTC
OK.  So my fix for doing the transparency tiles with clist fixes this.  I need to do a bit of regression testing on this, since it is a pretty big change.
Comment 5 Robin Watts 2011-07-19 20:17:55 UTC
Fixed with the merging of pattern_clist_branch.