pdf/pdf_pattern.c
@@ -161,7 +161,7 @@ pdfi_pattern_paint(const gs_client_color *pcc, gs_gstate *pgs)
     pdf_context *ctx = context->ctx;
     int code = 0;
 
-    code = pdfi_gsave(ctx);
+    code = pdfi_op_q(ctx);
     if (code < 0)
         return code;
     code = gs_setgstate(ctx->pgs, pgs);
@@ -175,7 +175,7 @@ pdfi_pattern_paint(const gs_client_color *pcc, gs_gstate *pgs)
     }
 
  exit:
-    pdfi_grestore(ctx);
+    pdfi_op_Q(ctx);
     return code;
 }
 
@@ -280,14 +280,15 @@ pdfi_pattern_paintproc(const gs_client_color *pcc, gs_gstate *pgs)
 static int
 pdfi_pattern_gset(pdf_context *ctx)
 {
-    int code, level = ctx->pgs->level;
+    int code, level;
     float strokealpha, fillalpha;
 
     strokealpha = gs_getstrokeconstantalpha(ctx->pgs);
     fillalpha = gs_getfillconstantalpha(ctx->pgs);
-    code = gs_copygstate(ctx->pgs, ctx->base_pgs);
-    if (code < 0)
-        goto exit;
+
+    /* TODO: Apparently gs_copygstate() isn't really the right thing, especially considering
+       ken's comment below.  Need to figure this out!
+    */
     /* gs_copygstate also copies the save depth, this seems to me like a bad idea!
      * It certainly causes problems for us because we pay attention to the save depth
      * when processing pdfi_gsave/pdfi_grestore and also at the end of processing
@@ -295,7 +296,14 @@ pdfi_pattern_gset(pdf_context *ctx)
      * graphics library gs_gsave/grestore, we must ensure that the save level
      * doesn't get overwritten.
      */
+    /* TODO: Hack? Save the things we don't want to overwrite... */
+    level = ctx->pgs->level;
+    code = gs_copygstate(ctx->pgs, pdfi_get_DefaultQState(ctx));
+    /* TODO: Hack? Put back the things we don't want to overwrite... */
     ctx->pgs->level = level;
+
+    if (code < 0)
+        goto exit;
     code = gs_setstrokeconstantalpha(ctx->pgs, strokealpha);
     code = gs_setfillconstantalpha(ctx->pgs, fillalpha);
 
